# private-code-comments

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  diag.jsonrpc2  go.mod  go.sum  pcc.config.json  req.jsonrpc2  test.txt  test2.txt  workspace.marker
.github/workflows/: release.yml  tag-and-release.yml  test.yml
config/nvim/: BUILD.bazel  init.lua
docs/: experimental.md
nvim_testing/: BUILD.bazel  macros.bzl  neovim.go  neovim_test.go  sqlite.go
nvim_testing/content/: BUILD.bazel  textfile.txt
pkg/: BUILD.bazel  db.go  db_test.go  files.go  files_test.go  model.go  server.go
plugin/: BUILD.bazel
plugin/lua/pcc/: init.lua
plugin/nvim/: init.lua
plugin/nvim/lua/pcc/: init.lua
scripts/: BUILD.bazel  view_logs.sh
tc/: BUILD.bazel  pkg.go
tools/: workspace_status.sh
