load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//build:my_package_name.bzl", "name_part_from_command_line")

package(default_visibility = ["//visibility:public"])

# bazel run //:gazelle
# bazel run //:gazelle -- update-repos --from_file=go.mod
# gazelle:prefix github.com/filmil/private-code-comments
gazelle(name = "gazelle")

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

filegroup(
    name = "plugin_dir",
    srcs = ["plugin"],
)

filegroup(
    name = "marker",
    srcs = ["pcc.config.json"],
)

name_part_from_command_line(
    name = "name_part_from_command_line",
    build_setting_default = "@set_me@"
)
    

pkg_zip(
    name = "release",
    srcs = [
        "//bin/pcc",
    ],
    package_dir = "pcc",
    package_file_name = "pcc-{name_part}.zip",
    package_variables = ":name_part_from_command_line"
)
