load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

# bazel run //:gazelle
# gazelle:prefix github.com/filmil/private-code-comments
gazelle(name = "gazelle")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

# bazel run //:gazelle-update-repos
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "plugin_dir",
    srcs = ["plugin"],
)

filegroup(
    name = "marker",
    srcs = ["pcc.config.json"],
)

filegroup(
    name = "readme",
    srcs = ["README.md"],
)
