module(
    name = "private_code_comments",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "gotopt2", version = "2.2.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.8.2",
    dev_dependency = True,
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "neovim",
    build_file = "//third_party/neovim:BUILD.bazel.neovim",
    integrity = "sha256-vh8JiNDeccN1mCuHuGzSjSurNezoKFq+OwqsV2BN/Fo=",
    strip_prefix = "nvim-linux64",
    urls = [
        "https://github.com/neovim/neovim/releases/download/v0.10.0/nvim-linux64.tar.gz",
    ],
)

bazel_dep(name = "gazelle", version = "0.46.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_davecgh_go_spew", "com_github_golang_glog", "com_github_mattn_go_sqlite3", "com_github_neovim_go_client", "dev_lsp_go_jsonrpc2", "dev_lsp_go_protocol")
