load("@rules_go//go:def.bzl", "go_library")
load(":macros.bzl", "nvim_go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "nvim_testing",
    testonly = True,
    srcs = [
        "neovim.go",
        "sqlite.go",
    ],
    importpath = "github.com/filmil/private-code-comments/nvim_testing",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg",
        "//tc",
        "@com_github_golang_glog//:glog",
        "@com_github_neovim_go_client//nvim",
        "@dev_lsp_go_protocol//:protocol",
    ],
)

filegroup(
    name = "content_dir",
)

nvim_go_test(
    name = "nvim_testing_test",
    srcs = ["neovim_test.go"],
    args = [
        "--edit-file",
        "$(location //nvim_testing/content:file)",
    ],
    data = [
        "//:marker",
        "//nvim_testing/content:file",
    ],
    embed = [":nvim_testing"],
    deps = [
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_neovim_go_client//msgpack/rpc",
        "@dev_lsp_go_protocol//:protocol",
    ],
)
