load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pkg",
    srcs = [
        "db.go",
        "files.go",
        "model.go",
        "server.go",
    ],
    importpath = "github.com/filmil/private-code-comments/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew",
        "@com_github_golang_glog//:glog",
        "@dev_lsp_go_jsonrpc2//:jsonrpc2",
        "@dev_lsp_go_protocol//:protocol",
    ],
)

go_test(
    name = "pkg_test",
    size = "small",
    srcs = [
        "db_test.go",
        "files_test.go",
    ],
    embed = [":pkg"],
    deps = [
        "//tc",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@dev_lsp_go_protocol//:protocol",
    ],
    cgo = True,
)
